--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,14 @@
 name: build
 
 on:
-  pull_request: {}
-  release: {}
+  push:
+    branches:
+      - "master"
+    tags:
+      - "v*"
+  pull_request:
+    branches:
+      - "master"
 
 jobs:
   build:
@@ -10,12 +16,30 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+
       - name: setup qemu
         uses: docker/setup-qemu-action@v1
       - name: setup buildx
         uses: docker/setup-buildx-action@v1
         with:
           install: true
-      - name: build
-        run: |
-          docker build .
+
+      - name: docker metadata
+        id: metadata
+        uses: docker/metadata-action@v3
+        with:
+          images: quay.io/calebdoxsey/kubernetes-cloudflare-sync
+
+      - name: docker login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+
+      - name: build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.metadata.output.tags }}
+          labels: ${{ steps.metadata.output.labels }}
