--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,5 +42,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.metadata.output.tags }}
-          labels: ${{ steps.metadata.output.labels }}
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
